welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if ( (day==0 && day==6) && vaction=true) {
                                ^alarmClock:13: error: type mismatch;
 found   : Unit
 required: String
	if ( (day==0 && day==6) && vaction=true) {
        ^